src/generate/snapshots/bevy_state_plugin_generator__generate__tests__snapshots@nested_example_None_rustfmt.snap
---
source: src/generate/tests.rs
expression: "generate_all_type_definitions(node, naming_scheme)"
---
[
    "Menu -> Menu",
    "Main -> Main",
    "Options -> Options",
    "Game -> Game",
    "Graphics -> Graphics",
    "Audio -> Audio",
    "Gameplay -> Gameplay",
    "Save -> Save",
    "Load -> Load",
]
